shelter/pages/style.scss
/* ... */
.header-pets .title {
    color: $color-dark-l;
}
.header-pets .subtitle {
    color: $color-dark-3xl;
}
.header-pets .logo:hover .title{
    color: $color-primary;
}
.header-pets .logo:hover .subtitle{
    color: $color-primary;
}
.header-pets li {
    color: $color-dark-l;
}
.header-pets li:hover {
    color: $color-dark-3xl;
}
.header-pets #li-item-2 {
    cursor: auto;
    color: $color-dark-3xl;
}
.header-pets #li-item-2 span {
    border-bottom: 3px solid $color-primary;
}
.pets-navigation {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    width: 340px;
}
.pets-navigation .button-paginator {
    font-family: 'Georgia';
    font-style: normal;
    font-weight: 400;
    font-size: 20px;
    line-height: 23px;
    letter-spacing: 0.06em;
}
.button-inactive-element {
    width: 52px;
    height: 52px;
    border: 2px solid $color-dark-s;
    color: $color-dark-s;
    border-radius: 100px;
    background: none;
    cursor: auto;
    transition-duration: 1s;
}
.button-normal-element {
    width: 52px;
    height: 52px;
    border: 2px solid $color-primary;
    border-radius: 100px;
    background: $color-primary;
    cursor: pointer;
    transition-duration: 1s;
    color: $color-dark-3xl;
}
.button-normal-element:hover {
    border-color: $color-primary-light;
    background: $color-primary-light;
}
.pets-navigation .button-arrow-element {
    color: $color-dark-3xl;
}

.hamburger {
    display: none;
    width: 30px;
    height: 22px;
    position: relative;
    cursor: pointer;
}
.hamburger-line {
    display: inline-block;
    background-color: $color-primary;
    width: 100%;
    height: 2px;
    position: absolute;
    transition-duration: 1s;
}
.hamburger-line:nth-of-type(2) {
    top: 10px;
}
.hamburger-line:nth-of-type(3) {
    top: 20px;
}
.hamburger:hover .hamburger-line{
    background-color: $color-light-l;
}
.header-pets .hamburger-line {
    background-color: #000000;
}
.header-pets .hamburger:hover .hamburger-line {
    background-color: $color-primary;
}

/*Tablet 768p*/
@media (min-width: $tablet-width) and (max-width: 1200px) {
    .wrapper{
        min-width: $content-width-tablet;
        margin-left: 30px;
        margin-right: 30px;
    }
    .start-screen .wrapper {
        flex-direction: column;
        height: 1165px;
    }
    .start-screen-content {
        margin-top: 150px;
        margin-left: 124px;
        margin-right: 124px;
        max-width: 800px;
    }
    .start-screen p {
        color: $color-dark-s;
        max-width: 800px;
    }
    .start-screen-content .button-primary {
        align-self: center;
    }
    .start-screen img {
        width: 569px;
    }
    .about .wrapper {
        flex-direction: column-reverse;
        align-items: center;
        justify-content: flex-end;
        height: 1048px;
    }
    .about-content {
        max-width: 800px;
        margin-left: 139px;
        margin-right: 139px;
        padding-right: 0;
        padding-bottom: 0;
        padding-top: 80px;
    }
    .about p {
        max-width: 800px;
    }
    .about-pets {
        padding-top: 80px;
        padding-left: 0;
        padding-bottom: 0;
    }
    .pets .slider {
        max-width: $content-width-tablet;
    }
    .pets .card:nth-of-type(4) {
        display: none;
    }
    .pets .card + .card {
        margin-left: 40px;
    }
    .pets .button-arrow-1 + .card {
        margin-left: 12px;
    }
    .pets .card + .button-arrow-2 {
        margin-left: 12px;
    }
    .help .wrapper {
        height: 779px;
    }
    .help .list{
        width: 630px;
        row-gap: 55px;
        column-gap: 60px;
    }
    .list-item {
        width: 170px;
    }
    .donation .wrapper {
        flex-direction: column-reverse;
        height: 783px;
        justify-content: flex-end;
    }
    .donation-doge {
        padding-top: 60px;
        padding-left: 0;
        padding-bottom: 0;
    }
    .donation-content {
        padding-top: 80px;
        padding-right: 0;
        padding-bottom: 0;
    }
    .footer .wrapper {
        height: 639px;
        flex-wrap: wrap;
        align-items: center;
        justify-content: center;
    }
    .questions {
        padding-right: 60px;
        padding-left: 10px;
    }
    .questions, .visit {
        padding-top: 10px;
    }
    .pets-standalone .wrapper {
        height: 1733px;
    }
    .pets-standalone h1 {
        padding-top: 80px;
        margin: 0;
    }
    .pets-standalone .slider {
        width: 580px;
        margin-top: 30px;
        padding-bottom: 40px;
    }
    .pets-standalone .card:nth-of-type(7),
    .pets-standalone .card:nth-of-type(8) {
        display: none;
    }
}
/* ... */

